system-monitor/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-backend-service
spec:
  type: NodePort
  selector:
    app: monitor-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
